--- a/dashboard.css
+++ b/dashboard.css
@@ -53,17 +53,18 @@ article {
     background: none;
     color: black;
     box-shadow: none;
+    margin: 0.2em
     }
 
 .job_disabled_or_aborted {
-    -webkit-transform: rotate(20deg);
-    -moz-transform: rotate(20deg);
+    -webkit-transform: rotate(12deg);
+    -moz-transform: rotate(12deg);
     position: absolute;
     color: DarkRed;
-    border: 10px dashed black;
+    border: 0.1em dashed black;
     margin: 0;
-    padding: 10px;
-    font-size: 2.5em;
+    padding: 0.2em;
+    font-size: 2em;
     }
 
 .workon{
@@ -81,10 +82,9 @@ article {
 
 .failedDots { 
     position: absolute; 
-    width: 100%; 
-    bottom: 0px; 
-    left: 0px; 
-    padding: 0.2em;
+    bottom: 0.2em; 
+    left: 0.2em;
+    right: 0.2em; 
     }
 
 .dot { 
@@ -100,13 +100,11 @@ article {
     -o-box-shadow: 2px 2px 2px #333333;
     -ms-box-shadow: 2px 2px 2px #333333;
     box-shadow: 2px 2px 2px #333333;
+    opacity: 0.5;
     }
 
-.warning {
-    background-image: url(css/img/warning.png), -webkit-linear-gradient(top, #990000 0%, #660000 20%, transparent 30%), -webkit-linear-gradient(right, #990000 0%, #330000 2em, transparent 2.5em);; 
-    background-size: 1.7em 1.7em, auto, auto;
-    background-repeat: no-repeat; 
-    background-position: right center;
+.warning_info {
+    background-image: -webkit-linear-gradient(top, #990000 0%, #660000 20%, transparent 30%); 
     border-radius: 0.3em;
     position: absolute;
     right: 0px;
@@ -115,21 +113,44 @@ article {
     width: 100%;
     }
 
-.warning > div {
+.warning_info > div {
     font-size: 0.4em;
-    line-height: 1em;
+    line-height: 1.2em;
     color: white;
     text-align: left;
     padding-left: 1em;
     }
+
+.warning {
+    background-image: url(css/img/warning.png);
+    background-color: rgba(99,0,0,0.8); 
+    background-size: 1.2em 1.2em, auto, auto;
+    background-repeat: no-repeat; 
+    background-position: center;
+    border-radius: 0 0.3em 0.3em 0;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    height: 100%;
+    width: 2em;
+    }
+
 div.info {
-    font-size: 0.4em;
-    color: black;
+    border-radius: 0.6em 0 0.6em 0 ;
+    background: rgba(99,0,0,0.8);
+    padding: 0.1em 0.3em;
+    font-size: 0.5em;
+    color: rgba(255,255,255,0.5);
     position: absolute;
     bottom: 0px;
+    right: 0px;
+    }
+    
+.warning ~ div.info {
+    right: 4em;
+    border-radius: 0.6em 0 0 0;
     }
     
 .container {
-	overflow: hidden;
-	
+    overflow: hidden;
 }
