--- a/dashboard.css
+++ b/dashboard.css
@@ -104,7 +104,7 @@ article {
     }
 
 .warning_info {
-    background-image: -webkit-linear-gradient(top, #990000 0%, #660000 20%, transparent 30%); 
+    background-image: -webkit-linear-gradient(top, #990000 0%, #770000 0.5em, transparent 0.5em); 
     border-radius: 0.3em;
     position: absolute;
     right: 0px;
