--- a/dashboard.css
+++ b/dashboard.css
@@ -104,12 +104,12 @@ article {
     }
 
 .warning_info {
-    background-image: -webkit-linear-gradient(top, #990000 0%, #770000 0.5em, transparent 0.5em); 
-    border-radius: 0.3em;
+    background-color: rgba(0,0,0,0.3); 
+    border-radius: 0.3em 0.3em 0 0;
     position: absolute;
     right: 0px;
     top: 0px;
-    height: 100%;
+    height: 0.5em;
     width: 100%;
     }
 
@@ -123,7 +123,6 @@ article {
 
 .warning {
     background-image: url(css/img/warning.png);
-    background-color: rgba(99,0,0,0.8); 
     background-size: 1.2em 1.2em, auto, auto;
     background-repeat: no-repeat; 
     background-position: center;
