--- a/dashboard.css
+++ b/dashboard.css
@@ -123,7 +123,7 @@ article {
 
 .warning {
     background-image: url(css/img/warning.png);
-    background-size: 1.2em 1.2em, auto, auto;
+    background-size: 1.7em, auto, auto;
     background-repeat: no-repeat; 
     background-position: center;
     border-radius: 0 0.3em 0.3em 0;
@@ -153,3 +153,28 @@ div.info {
 .container {
     overflow: hidden;
 }
+
+#drogenlied {
+    position: absolute; width: 100%; height: 100%; top: 0; left: 0;
+    }
+#drogenlied div {
+    display: table;
+    width: 10em;
+    height: 5em;
+    background: rgba(0,200,0,0.8);
+    border-radius: 1em;
+    border: #005500 solid 0.3em;
+    color: white;
+    text-shadow: 0.1em 0.1em 0.2em black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -5em;
+    margin-top: -2.5em
+    }
+    
+#drogenlied p {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    }
